Add description of project folders and files.

--- a/server_clients/locales/ru.json
+++ b/server_clients/locales/ru.json
@@ -19,7 +19,7 @@
 	"Author": "Автор",
 	"Date published": "Дата публикации",
 	"This campaign is really very cool.": "Это кампания реально очень крутая.",
-	"It was founded in 20019 BC. The best dinosaurs and aliens.": "Основана в 20019 году до н.э. Лучшими динозавры и пришельцами.",
+	"It was founded in 20019 BC. The best dinosaurs and aliens.": "Основана в 20019 году до н.э. Лучшими динозаврами и пришельцами.",
 	"Phones of the company": "Телефоны компании",
 	"Addresses of the company": "Адреса компании",
 	"Close": "Закрыть",
